force-app/main/default/objects/Field_Mapping__mdt/fields/External_Label__c.field-meta.xml
<CustomField>
    <fullName>External_Label__c</fullName>
    <description>What the vendor calls this value, e.g. the Asana section name &quot;Up Next&quot;. A label only: nothing matches on it, because names change. It exists so a person reading the mapping table or a log row can tell which column a gid refers to.</description>
    <label>External Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>