force-app/main/default/objects/Field_Mapping__mdt/fields/External_System__c.field-meta.xml
<CustomField>
    <fullName>External_System__c</fullName>
    <description>System this mapping belongs to. A local picklist rather than the External_System global value set, because custom metadata types do not support global value sets - the deploy says &quot;Global picklists are not supported on this object&quot;. The values must therefore be kept in step with the global set by hand; ExternalSystem.cls is the one place the vocabulary is written down, and FieldMappingServiceTest asserts the two agree.</description>
    <label>External System</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jira</fullName>
            </value>
            <value>
                <fullName>Asana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>