force-app/main/default/objects/Field_Mapping__mdt/fields/External_Value__c.field-meta.xml
<CustomField>
    <fullName>External_Value__c</fullName>
    <description>The vendor&apos;s own key, and the thing matched on. For an Asana status this is the SECTION GID, never the section name: a gid survives a rename and a name does not, and a mapping that silently stopped matching because somebody retitled a column would be invisible. Compared case-insensitively after trimming.</description>
    <label>External Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>