force-app/main/default/objects/Field_Mapping__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this mapping is in use. Retiring a mapping by clearing this keeps the row, so a value that used to mean something still explains itself when it turns up in an old log line.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>