force-app/main/default/objects/Field_Mapping__mdt/fields/Mapping_Type__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Type__c</fullName>
    <description>Which Work_Item__c field this row maps onto. One metadata type rather than one per field: the lookup shape is identical, and splitting it would mean two classes doing the same thing to two tables that must agree about the same vocabulary. Field (build 08) maps a Work_Item__c field API name to the vendor field that holds it, e.g. Start_Date__c to Jira customfield_10015 - custom field ids differ per Jira site, so they are configuration, never constants. Priority (build 09) maps a Jira priority id or an Asana Priority option gid to a Priority__c value; Asana&apos;s Priority field gid itself is a Field row.</description>
    <label>Mapping Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Status</fullName>
                <default>true</default>
                <label>Status</label>
            </value>
            <value>
                <fullName>Type</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>