force-app/main/default/objects/Field_Mapping__mdt/fields/Normalized_Value__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Value__c</fullName>
    <description>The Work_Item__c picklist value this external value means, e.g. In Progress. Must match the picklist API name exactly - Status__c and Type__c are restricted, so a typo here does not fail loudly, it quietly stops mapping and the record lands on Unspecified.</description>
    <label>Normalized Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>